<resources xmlns:name="http://schemas.android.com/tools">
    <string name="app_name">साधुमार्गी </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">MainActivity</string>
    <string name="welcome">स्वागत करता है आप सभी का !!!</string>
    <string name="ic1">पत्रिका</string>
    <string name="ic2">साहित्य</string>
    <string name="ic3">गति विधि</string>
    <string name="ic4"> विहार</string>
    <string name="ic6">दान</string>
    <string name="ic52">प्रवचन</string>
    <string name="ic5"> प्रवचन</string>
    <string name="ic7">पाठशाला</string>
    <string name="ic8">हमसे संपर्क करें</string>
    <string name="ic9">सदस्य</string>
    <string name="ic10"> कार्यसमिति</string>
    <string name="title_activity_sahitya">साहित्य</string>
    <string name="title_activity_photo_gallery">गेलरी</string>
    <string name="title_activity_vihar">Vihar</string>
    <string name="title_activity_pravachan">Pravachan</string>
    <string name="title_activity_donations">दान</string>
    <string name="title_activity_pathsala">Pathshala</string>
    <string name="title_activity_members">सदस्य</string>
    <string name="title_activity_kariya_karni">KaryaSamiti</string>
    <string name="name">नाम</string>
    <string name="designation">पद</string>
    <string name="region">क्षेत्र</string>
    <string name="city">शहर</string>
    <string name="phone">फोन</string>
    <string name="pravartti">प्रवृत्ती</string>
    <string name="sample_html">sample.html</string>
    <string name="no_such_page">There is no such page&#8230;</string>
    <string name="guruname">सिंगडापति का नाम :</string>
    <string name="guruassist">चरित्र आत्माओ का नाम: </string>
    <string name="address">प्रमाचार  :</string>
    <string name="gurutravel">विहार(कहा से कहा तक) :</string>
    <string name="gurulocation">ठहरने का स्थान :</string>
    <string name="guruattender">विहार कर्मी  :</string>
    <string name="guruchiefattender">सक्रिय व्यक्ति  : </string>
    <string name="phoneno">फ़ोन नंबर  :</string>
    <string name="distance">दूरी :</string>
    <string name="gurualternatephone">वैकल्पिक फोन कोई  : </string>
    <string name="date">तारीख</string>
    <string name="typeofexams">पाठशाला के प्रकार</string>
    <string name="typeofdonations">दान के प्रकार</string>
    <string name="sangsahitya">Sangha Sahitya</string>
    <string name="ramsahitya">Ram Sahitya </string>
    <string name="naneshsahitya">Naneshvani</string>
    <string name="AgamandTatva">Agam and Tatva</string>
    <string name="donate_name">दान नाम  :</string>
    <string name="donate_details">दान विवरण  :</string>
    <string name="donate_amount">दान राशि  :</string>
    <string name="make_donate"> Pay Now </string>
    <string name="make_donate_name">दानी का नाम</string>
    <string name="make_donate_phone">दानी का फोन</string>
    <string name="sanghistory">साधुमार्गी संघ इतिहास</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="title_activity_books_pages">BooksPages</string>
    <string name="title_activity_vihar_list_adapter">ViharListAdapter</string>
    <string name="title_activity_grid_view_adapter">GridViewAdapter</string>
    <string name="title_activity_oldkarniadapter">oldkarniadapter</string>
    <string name="title_activity_currentkarniadapter">currentkarniadapter</string>
    <string name="English_Pref_Color_Key">eng_key_color</string>
    <string name="Meaning_Pref_Color_Key">mean_key_color</string>
    <string name="user_preference_text">Options</string>
    <string name="english_word_color">English Word Color</string>
    <string name="notification">Notification</string>
    <string name="more_apps_description">Download more useful apps</string>
    <string name="hindi_word_color">Hindi Word Color</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="long1">Long</string>
    <string name="text_size">Text Size</string>
    <string name="loginregistraion">Login/Registration</string>
    <string-array name="ic_names">

        <item>पत्रिका</item>
        <item>>साहित्य</item>
        <item>गति विधि</item>
        <item> विहार</item>
        <item>दान</item>
        <item>प्रवचन</item>

        <item>पाठशाला</item>
        <item>हमसे संपर्क करें</item>
        <item>सदस्य</item>
        <item>कार्यसमिति</item>

    </string-array>
    <string name="banner_home_footer">ca-app-pub-5437421632937651/4782080523</string>
    <string name="interstitial_full_screen">ca-app-pub-5437421632937651/3165746520</string>
    <string name="donate">उपहार</string>
    <string name="title_staff">अमला</string>
    <string name="title_students">छात्रों</string>
    <string name="title_exams">Pariksha</string>
    <string name="txt_exam_centers">परीक्षा केंद्र</string>
    <string name="title_shivir">Shivira</string>
    <string name="edition_date">Edition</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="School_list">पाठशाला लिस्ट</string>
    <string name="Registration">रेजिस्ट्रेशन</string>
    <string name="Rules">रूल्स</string>
    <string name="Pathsala_Details">डीटेल्स</string>
    <string name="Pathsala_Syllabus">सिलबस</string>
    <string name="Pathsala_Activities">आक्टिविटीस</string>
    <string name="Upcomming_Shivir">आगामी शिविर</string>
    <string name="Past_Shivir">अतीत शिविर</string>
    <string name="Shivir_Registration">शिविर रेजिस्ट्रेशन</string>
    <string name="Upcomming_Exam">आगामी परीक्षा</string>
    <string name="PastExam_Result">अतीत परीक्षा </string>
    <string name="Exam_Registration">रेजिस्ट्रेशन</string>
    <string name="Sign_in">Sign in </string>
    <string name="Create_Account">Create Account</string>
    <string name="MrorMs">Kumar/Kumari</string>
    <string name="Sriman">Sriman</string>
    <string name="Srimati">Srimati</string>
    <string name="Emailid">*Mobile No./Email id</string>
    <string name="Password">*Password</string>
    <string name="login">LOGIN</string>
    <string name="create_new_profile">CREATE NEW PROFILE</string>
    <string name="Forgot_Password">Forgot Password ??</string>
    <string name="signin">SIGN IN</string>
    <string name="firstname">"*First Name"</string>
    <string name="middlename">*Middle Name</string>
    <string name="lastname">"*Last Name"</string>
    <string name="birthdate">*Birth Date</string>
    <string name="mobile_number">*Mobile No </string>
    <string name="email_id">*Email id</string>
    <string name="select_country">*Select Country</string>
    <string name="select_state">*Select State</string>
    <string name="selectcity">*Select City</string>
    <string name="pincode">*Pin Code</string>
    <string name="Retype_password">*Retype Password</string>
    <string name="terms_conditions">I agree to the Terms and Conditions</string>
    <string name="create_profile">CREATE PROFILE</string>
    <string name="go_ahead">Go Ahead</string>
    <string name="my_Profile">My Profile</string>
    <string name="thank_you">धन्यवाद! आपने प्रोफाइल की सभी श्रेणियों को अनलॉक कर लिया है। कृपया अपने प्रोफाइल को हमेशा नवीनतम रखे। यदि आपको किसी भी प्रकार की सहायता की जरुरत हो अथवा किसी प्रकार की कोई त्रुटि नजर आये तो आप हमसे info@sadhumargi.com पर संपर्क कर सकते हैं।</string>
    <string name="next">"Next"</string>
    <string name="Basic_Details">"सामान्य विवरण"</string>
    <string name="my_profile">My Profile</string>
    <string name="add_photo">Add Photo</string>
    <string name="Password.">"पासवर्ड"</string>
    <string name="Logout">लोग आउट</string>
    <string name="Editprofile">"Edit Profile"</string>
    <string name="Skip">"Skip"</string>
    <string name="Upload">"UPLOAD"</string>
    <string name="Upload_photo">उपलोआड फोटो</string>
    <string name="contact_details">"संपर्क विवरण"</string>
    <string name="Education">"शिक्षा"</string>
    <string name="Business">व्यवसाय</string>
    <string name="Family_head">"Family Head ??"</string>
    <string name="Update_details">Update Details</string>
    <string name="Name">"*Name"</string>
    <string name="Mother_Name">"*Mother Name"</string>
    <string name="Address">"*पता"</string>
    <string name="Addressline2">"*Address line2"</string>
    <string name="Age">*Age</string>
    <string name="Gender">*Gender</string>
    <string name="Bloodgrp">Blood Group</string>
    <string name="Maritalstatus">Marital Status</string>
    <string name="Whatsupno">Whatsapp No.</string>
    <string name="Alternativeno.">Alternative No.</string>
    <string name="Details">Details</string>
    <string name="Sangh">"संघ"</string>
    <string name="Achievements">उपलब्धियां</string>
    <string name="Vidhesi_yatra">विदेश यात्रा</string>
    <string name="Dharmik">धार्मिक </string>
    <string name="sadasya">सदस्य</string>
    <string name="postal_address">पत्र व्यवहार पता</string>
    <string name="Postal_address">पत्र व्यवहार पता</string>
    <string name="add_to_profile">प्रोफाइल मे जोड़े</string>
    <string name="Religious_chkbx8">अन्य</string>
    <string name="Sangh_tab1_brieftxt">निम्नलिखत कार्यों में आपकी रूचि:</string>
    <string name="Sangh_tab1_title1">संगठन</string>
    <string name="Sangh_tab1_chkbx1">कंप्यूटर ऑपरेटर</string>
    <string name="Sangh_tab1_chkbx2">प्रोजेक्ट संचालन</string>
    <string name="Sangh_tab1_chkbx3">संघ विकास हेतु कोष एकत्र करना</string>
    <string name="Sangh_tab1_chkbx4">प्रवास कार्यक्रम</string>
    <string name="Sangh_tab1_chkbx5">वक्तृत्व कला के ट्रेनर बनना</string>
    <string name="Sangh_tab1_chkbx6">संघ व्यवस्था सम्बन्धी फ़ोन करना</string>
    <string name="Sangh_tab1_chkbx7">संघ प्रवृतियों के लिए योजना तैयार करना</string>
    <string name="Sangh_tab1_title2">धार्मिक</string>
    <string name="Sangh_tab1_chkbx8">संत चिकित्सा सेवा</string>
    <string name="Sangh_tab1_chkbx9">विहार सेवा</string>
    <string name="Sangh_tab1_chkbx10">गोचरी सेवा</string>
    <string name="Sangh_tab1_chkbx11">जप-तप संचालन</string>
    <string name="Sangh_tab1_chkbx12">स्वाध्यायी सेवा</string>
    <string name="Sangh_tab1_chkbx13">धार्मिक स्थल कार सेवा</string>
    <string name="Sangh_tab1_chkbx14"> शिविरो/धार्मिक कार्य का मैनेजमेंट</string>
    <string name="Sangh_tab1_chkbx15">धार्मिक लेखन/संपादन</string>
    <string name="Sangh_tab1_chkbx16">धार्मिक ड्राइंग बनाना</string>
    <string name="Sangh_tab1_chkbx17"> स्वयं का धार्मिक ज्ञान बढ़ाना</string>
    <string name="Sangh_tab1_chkbx18">शिविरो/पाठशाला में पढ़ाना</string>
    <string name="Sangh_tab1_chkbx19"> स्थानीय समता शाखा संचालन</string>
    <string name="Sangh_tab1_title3">सामाजिक</string>
    <string name="Sangh_tab1_chkbx20">मानव सेवा</string>
    <string name="Sangh_tab1_chkbx21">चिकित्सा शिविर</string>
    <string name="Sangh_tab1_chkbx22">शाकाहार प्रचार</string>
    <string name="Sangh_tab1_chkbx23">साहित्य सेवा</string>
    <string name="Sangh_tab1_chkbx24"> प्याऊ संचालन</string>
    <string name="Sangh_tab1_chkbx25">भाषण देना/सभा संचालन</string>
    <string name="Sangh_tab1_chkbx26"> स्कूल छात्रावास एवं चिकित्सालय का संचालन</string>
    <string name="Sangh_tab1_chkbx27">स्कूलो में व्यसन मुक्ति कार्यक्रम करना</string>
    <string name="Sangh_tab1_chkbx28">वेबसाइट/इंटरनेट पर धार्मिक ग्रुप का संचालन</string>
    <string name="Sangh_tab2_brieftxt">आप श्रीसंघ में किस प्रकार से सेवाए दे सकते है:</string>
    <string name="Sangh_tab2_chkbx29">समय से</string>
    <string name="Sangh_tab2_chkbx30">अर्थ से</string>
    <string name="Sangh_tab2_chkbx31">अपने स्वय के कार्यालय में बैठकर</string>
    <string name="Sangh_tab2_chkbx32">अनुभव से</string>
    <string name="Sangh_tab2_chkbx33">विचारो से</string>
</resources>